--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "remark": "^13.0.0",
-    "remark-html": "^13.0.1",
-    "showdown": "^1.9.1"
+    "remark-html": "^13.0.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.10",
