--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "devDependencies": {
     "@types/node": "^14.14.10",
     "@types/react": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
+    "eslint": "^7.14.0",
     "prettier": "^2.2.1",
     "typescript": "^4.1.2"
   }
