--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@types/showdown": "^1.9.3",
     "date-fns": "^2.16.1",
     "gray-matter": "^4.0.2",
+    "highlight.js": "^10.4.1",
     "next": "^10.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "remark": "^13.0.0",
+    "remark-highlight.js": "^6.0.0",
     "remark-html": "^13.0.1"
   },
   "devDependencies": {
