--- a/package.json
+++ b/package.json
@@ -1,31 +1,46 @@
 {
-  "name": "learn-starter",
-  "version": "0.1.0",
+  "name": "remix-starter-express",
   "private": true,
+  "version": "1.0.0",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "postinstall": "tsc -b",
+    "build": "remix build && tsc -b",
+    "dev": "concurrently \"npm run css:watch\" \"remix run\" \"tsc -b -w --preserveWatchOutput\" \"cross-env NODE_ENV=development nodemon -w app -w build -w data-build -e js,jsx,ts,tsx,md,mdx server.js\"",
+    "start": "node server.js",
+    "css:watch": "postcss styles --base styles --dir app/ -w",
+    "css:build": "postcss styles --base styles --dir app/ --env production"
   },
   "dependencies": {
-    "@types/showdown": "^1.9.3",
-    "date-fns": "^2.16.1",
+    "@remix-run/cli": "^0.8.0",
+    "@remix-run/data": "^0.8.0",
+    "@remix-run/express": "^0.8.0",
+    "@remix-run/react": "^0.8.0",
+    "autoprefixer": "^10.0.4",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "gray-matter": "^4.0.2",
     "highlight.js": "^10.4.1",
-    "next": "^10.0.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "morgan": "^1.10.0",
+    "postcss": "^8.1.14",
+    "postcss-cli": "^8.3.0",
+    "postcss-import": "^13.0.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-router": "^6.0.0-beta.0",
+    "react-router-dom": "^6.0.0-beta.0",
     "remark": "^13.0.0",
     "remark-highlight.js": "^6.0.0",
     "remark-html": "^13.0.1"
   },
   "devDependencies": {
-    "@types/node": "^14.14.10",
-    "@types/react": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.9.0",
-    "@typescript-eslint/parser": "^4.9.0",
-    "eslint": "^7.14.0",
-    "prettier": "^2.2.1",
-    "typescript": "^4.1.2"
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
+    "concurrently": "^5.3.0",
+    "cross-env": "^7.0.2",
+    "nodemon": "^2.0.5",
+    "typescript": "^4.0.3"
+  },
+  "engines": {
+    "node": "12"
   }
 }
