--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "@types/showdown": "^1.9.3",
     "date-fns": "^2.16.1",
     "gray-matter": "^4.0.2",
     "highlight.js": "^10.4.1",
@@ -16,8 +15,12 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "remark": "^13.0.0",
-    "remark-highlight.js": "^6.0.0",
-    "remark-html": "^13.0.1"
+    "remark-autolink-headings": "^6.0.1",
+    "remark-gfm": "^1.0.0",
+    "remark-html": "^13.0.1",
+    "remark-prism": "^1.3.3",
+    "remark-slug": "^6.0.0",
+    "remark-toc": "^7.0.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.10",
