--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "date-fns": "^2.16.1",
     "gray-matter": "^4.0.2",
-    "highlight.js": "^10.4.1",
     "next": "^10.0.0",
+    "next-seo": "^4.17.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "remark": "^13.0.0",
@@ -19,8 +19,7 @@
     "remark-gfm": "^1.0.0",
     "remark-html": "^13.0.1",
     "remark-prism": "^1.3.3",
-    "remark-slug": "^6.0.0",
-    "remark-toc": "^7.0.0"
+    "remark-slug": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.10",
