--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
   "dependencies": {
     "date-fns": "^2.16.1",
     "gray-matter": "^4.0.2",
+    "image-trace-loader": "^1.0.2",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "^8.0.0",
     "next": "^10.0.0",
+    "next-compose-plugins": "^2.2.1",
+    "next-optimized-images": "^2.6.2",
     "next-seo": "^4.17.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -19,7 +25,8 @@
     "remark-gfm": "^1.0.0",
     "remark-html": "^13.0.1",
     "remark-prism": "^1.3.3",
-    "remark-slug": "^6.0.0"
+    "remark-slug": "^6.0.0",
+    "webp-loader": "^0.6.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.10",
