--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NEXT_PUBLIC_SITE_URL=localhost:3000 NODE_OPTIONS=\"--inspect\" next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
     "date-fns": "^2.16.1",
     "gray-matter": "^4.0.2",
+    "highlight.js": "^10.4.1",
     "image-trace-loader": "^1.0.2",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-optipng": "^8.0.0",
@@ -23,8 +24,9 @@
     "remark": "^13.0.0",
     "remark-autolink-headings": "^6.0.1",
     "remark-gfm": "^1.0.0",
+    "remark-highlight.js": "^6.0.0",
     "remark-html": "^13.0.1",
-    "remark-prism": "^1.3.3",
+    "remark-midas": "^6.0.0",
     "remark-slug": "^6.0.0",
     "webp-loader": "^0.6.0"
   },
