--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "learn-starter",
+  "name": "ricardobusquet.com",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,33 +8,24 @@
     "start": "next start"
   },
   "dependencies": {
-    "date-fns": "^2.16.1",
+    "date-fns": "^2.19.0",
     "gray-matter": "^4.0.2",
-    "highlight.js": "^10.4.1",
-    "image-trace-loader": "^1.0.2",
-    "imagemin-mozjpeg": "^9.0.0",
-    "imagemin-optipng": "^8.0.0",
-    "imagemin-svgo": "^8.0.0",
     "mdx-bundler": "^3.1.2",
-    "next": "^10.0.0",
+    "next": "^10.1.3",
     "next-compose-plugins": "^2.2.1",
     "next-optimized-images": "^2.6.2",
-    "next-seo": "^4.17.0",
-    "prism-react-renderer": "^1.2.0",
+    "next-seo": "^4.23.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "rehype-highlight": "4.1.0",
+    "rehype-highlight": "^4.1.0",
     "rehype-katex": "^4.0.0",
-    "rehype-slug": "4.0.1",
+    "rehype-slug": "^4.0.1",
     "remark-gfm": "^1.0.0",
-    "remark-math": "^4.0.0",
-    "styled-components": "^5.2.3",
-    "webp-loader": "^0.6.0"
+    "remark-math": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.10",
     "@types/react": "^17.0.0",
-    "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
     "eslint": "^7.14.0",
