--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "date-fns": "^2.19.0",
     "gray-matter": "^4.0.2",
+    "image-trace-loader": "^1.0.2",
     "mdx-bundler": "^3.1.2",
     "next": "^10.1.3",
     "next-compose-plugins": "^2.2.1",
@@ -21,7 +22,8 @@
     "rehype-katex": "^4.0.0",
     "rehype-slug": "^4.0.1",
     "remark-gfm": "^1.0.0",
-    "remark-math": "^4.0.0"
+    "remark-math": "^4.0.0",
+    "webp-loader": "^0.6.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.10",
