--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@exampledev/new.css": "^1.1.3",
     "date-fns": "^2.19.0",
     "gray-matter": "^4.0.2",
     "image-trace-loader": "^1.0.2",
