--- a/package.json
+++ b/package.json
@@ -11,11 +11,8 @@
     "@exampledev/new.css": "^1.1.3",
     "date-fns": "^2.19.0",
     "gray-matter": "^4.0.2",
-    "image-trace-loader": "^1.0.2",
     "mdx-bundler": "^3.1.2",
     "next": "^10.1.3",
-    "next-compose-plugins": "^2.2.1",
-    "next-optimized-images": "^2.6.2",
     "next-seo": "^4.23.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -23,8 +20,7 @@
     "rehype-katex": "^4.0.0",
     "rehype-slug": "^4.0.1",
     "remark-gfm": "^1.0.0",
-    "remark-math": "^4.0.0",
-    "webp-loader": "^0.6.0"
+    "remark-math": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.10",
