--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "next-seo": "^4.23.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "rehype-accessible-emojis": "^0.3.2",
     "rehype-highlight": "^4.1.0",
     "rehype-katex": "^4.0.0",
     "rehype-slug": "^4.0.1",
+    "remark-emoji": "^2.1.0",
     "remark-gfm": "^1.0.0",
     "remark-math": "^4.0.0"
   },
