--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@exampledev/new.css": "^1.1.3",
     "date-fns": "^2.19.0",
     "gray-matter": "^4.0.2",
+    "highlight.js": "^10.7.2",
     "mdx-bundler": "^3.1.2",
     "next": "^10.1.3",
     "next-seo": "^4.23.0",
@@ -22,7 +23,8 @@
     "rehype-slug": "^4.0.1",
     "remark-emoji": "^2.1.0",
     "remark-gfm": "^1.0.0",
-    "remark-math": "^4.0.0"
+    "remark-math": "^4.0.0",
+    "sass": "^1.32.8"
   },
   "devDependencies": {
     "@types/node": "^14.14.10",
