--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "@exampledev/new.css": "^1.1.3",
+    "classnames": "^2.3.1",
     "date-fns": "^2.19.0",
     "gray-matter": "^4.0.2",
     "highlight.js": "^10.7.2",
     "mdx-bundler": "^3.1.2",
     "next": "^10.1.3",
     "next-seo": "^4.23.0",
+    "prism-react-renderer": "^1.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "rehype-accessible-emojis": "^0.3.2",
