--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
   },
   "dependencies": {
     "@exampledev/new.css": "^1.1.3",
+    "classnames": "^2.3.1",
     "date-fns": "^2.19.0",
     "gray-matter": "^4.0.2",
-    "highlight.js": "^10.7.2",
     "mdx-bundler": "^3.1.2",
     "next": "^10.1.3",
     "next-seo": "^4.23.0",
+    "prism-react-renderer": "^1.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "rehype-accessible-emojis": "^0.3.2",
-    "rehype-highlight": "^4.1.0",
     "rehype-slug": "^4.0.1",
     "remark-emoji": "^2.1.0",
     "remark-gfm": "^1.0.0",
@@ -31,6 +31,7 @@
     "@typescript-eslint/parser": "^4.9.0",
     "eslint": "^7.14.0",
     "prettier": "^2.2.1",
+    "rollup": "^2.44.0",
     "typescript": "^4.1.2"
   }
 }
