--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "mdx-bundler": "^3.1.2",
     "next": "^10.1.3",
     "next-seo": "^4.23.0",
-    "prism-react-renderer": "^1.2.0",
+    "prism-themes": "^1.6.0",
+    "prismjs": "^1.23.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "rehype-accessible-emojis": "^0.3.2",
     "rehype-slug": "^4.0.1",
     "remark-emoji": "^2.1.0",
     "remark-gfm": "^1.0.0",
+    "remark-prism": "^1.3.5",
     "sass": "^1.32.8"
   },
   "devDependencies": {
