--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "@exampledev/new.css": "^1.1.3",
     "classnames": "^2.3.1",
     "date-fns": "^2.19.0",
+    "faunadb": "^4.2.0",
     "gray-matter": "^4.0.2",
+    "markdown-it": "^12.0.6",
+    "markdown-it-anchor": "^7.1.0",
+    "markdown-it-emoji": "^2.0.0",
     "mdx-bundler": "^3.1.2",
     "next": "^10.1.3",
     "next-seo": "^4.23.0",
@@ -24,9 +28,12 @@
     "remark-emoji": "^2.1.0",
     "remark-gfm": "^1.0.0",
     "remark-prism": "^1.3.5",
-    "sass": "^1.32.8"
+    "sass": "^1.32.8",
+    "shiki": "^0.9.3"
   },
   "devDependencies": {
+    "@types/markdown-it": "^12.0.1",
+    "@types/markdown-it-emoji": "^2.0.0",
     "@types/node": "^14.14.10",
     "@types/react": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
