--- a/package.json
+++ b/package.json
@@ -1,39 +1,33 @@
 {
-  "name": "ricardobusquet.com",
-  "version": "0.1.0",
   "private": true,
+  "name": "remix-app-template",
+  "description": "",
+  "license": "",
   "scripts": {
-    "dev": "NEXT_PUBLIC_SITE_URL=localhost:3000 NODE_OPTIONS=\"--inspect\" next dev",
-    "build": "next build",
-    "start": "next start"
+    "build": "remix build",
+    "dev": "node -r dotenv/config node_modules/.bin/remix dev",
+    "postinstall": "remix setup node",
+    "start": "remix-serve build"
   },
   "dependencies": {
-    "@exampledev/new.css": "^1.1.3",
-    "classnames": "^2.3.1",
-    "date-fns": "^2.19.0",
-    "gray-matter": "^4.0.2",
-    "mdx-bundler": "^3.1.2",
-    "next": "^10.1.3",
-    "next-seo": "^4.23.0",
-    "prism-themes": "^1.6.0",
-    "prismjs": "^1.23.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "rehype-accessible-emojis": "^0.3.2",
-    "rehype-slug": "^4.0.1",
-    "remark-emoji": "^2.1.0",
-    "remark-gfm": "^1.0.0",
-    "remark-prism": "^1.3.5",
-    "sass": "^1.32.8"
+    "@octokit/plugin-throttling": "^3.5.2",
+    "@octokit/rest": "^18.12.0",
+    "@remix-run/react": "^1.0.4",
+    "@remix-run/serve": "^1.0.4",
+    "dotenv": "^10.0.0",
+    "eslint": "^8.3.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "remix": "^1.0.4"
   },
   "devDependencies": {
-    "@types/node": "^14.14.10",
-    "@types/react": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.9.0",
-    "@typescript-eslint/parser": "^4.9.0",
-    "eslint": "^7.14.0",
-    "prettier": "^2.2.1",
-    "rollup": "^2.44.0",
+    "@remix-run/dev": "^1.0.4",
+    "@types/react": "^17.0.24",
+    "@types/react-dom": "^17.0.9",
     "typescript": "^4.1.2"
-  }
+  },
+  "engines": {
+    "node": ">=14"
+  },
+  "sideEffects": false
 }
