--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@ node_modules
 
 /.cache
 /build
+/dist
 /public/build
+
 
 # misc
 .DS_Store
@@ -12,5 +14,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-__old
 .env
