--- a/package.json
+++ b/package.json
@@ -3,31 +3,36 @@
   "name": "remix-app-template",
   "description": "",
   "license": "",
+
   "scripts": {
     "build": "remix build",
-    "dev": "node -r dotenv/config node_modules/.bin/remix dev",
-    "postinstall": "remix setup node",
-    "start": "remix-serve build"
+    "dev": "node -r dotenv/config node_modules/.bin/remix watch",
+    "postinstall": "remix setup cloudflare-workers",
+    "build:worker": "esbuild --define:process.env.NODE_ENV='\"production\"' --minify --bundle --sourcemap --outdir=dist ./worker",
+    "dev:worker": "esbuild --define:process.env.NODE_ENV='\"development\"' --bundle --sourcemap --outdir=dist ./worker",
+    "start": "miniflare --build-command \"npm run dev:worker\" --watch",
+    "deploy": "npm run build && wrangler publish"
   },
   "dependencies": {
-    "@octokit/plugin-throttling": "^3.5.2",
-    "@octokit/rest": "^18.12.0",
+    "@remix-run/cloudflare-workers": "^1.0.4",
     "@remix-run/react": "^1.0.4",
-    "@remix-run/serve": "^1.0.4",
     "dotenv": "^10.0.0",
-    "eslint": "^8.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.0.4"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^2.2.2",
     "@remix-run/dev": "^1.0.4",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "esbuild": "0.13.14",
+    "miniflare": "2.0.0-next.3",
     "typescript": "^4.1.2"
   },
   "engines": {
     "node": ">=14"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "main": "dist/worker.js"
 }
