--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,10 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+node_modules
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
+/.cache
 /build
+/dist
+/public/build
+
 
 # misc
 .DS_Store
@@ -23,12 +14,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env
 
-.vercel
-
-public/rss.xml
+.mf
+wrangler.toml
