--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "postinstall": "remix setup cloudflare-workers",
     "build:worker": "esbuild --define:process.env.NODE_ENV='\"production\"' --minify --bundle --sourcemap --outdir=dist ./worker",
     "dev:worker": "esbuild --define:process.env.NODE_ENV='\"development\"' --bundle --sourcemap --outdir=dist ./worker",
-    "start": "miniflare --build-command \"npm run dev:worker\" --watch",
-    "deploy": "npm run build && CF_ZONE_ID=${CF_ZONE_ID} CF_ACCOUNT_ID=${CF_ACCOUNT_ID} CF_API_TOKEN=${CF_API_TOKEN} wrangler publish"
+    "start": "miniflare --build-command \"npm run dev:worker\" --watch"
   },
   "dependencies": {
     "@remix-run/cloudflare-workers": "^1.0.4",
