--- a/package.json
+++ b/package.json
@@ -1,37 +1,28 @@
 {
   "private": true,
-  "name": "ricardobusquet.com",
+  "name": "remix-app-template",
   "description": "",
   "license": "",
-
   "scripts": {
     "build": "remix build",
-    "dev": "node -r dotenv/config node_modules/.bin/remix watch",
-    "postinstall": "remix setup cloudflare-workers",
-    "build:worker": "esbuild --define:process.env.NODE_ENV='\"production\"' --minify --bundle --sourcemap --outdir=dist ./worker",
-    "dev:worker": "esbuild --define:process.env.NODE_ENV='\"development\"' --bundle --sourcemap --outdir=dist ./worker",
-    "start": "miniflare --build-command \"npm run dev:worker\" --watch"
+    "dev": "remix dev",
+    "postinstall": "remix setup node"
   },
   "dependencies": {
-    "@remix-run/cloudflare-workers": "^1.0.4",
-    "@remix-run/react": "^1.0.4",
-    "dotenv": "^10.0.0",
+    "@remix-run/react": "^1.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remix": "^1.0.4"
+    "remix": "^1.0.5",
+    "@remix-run/vercel": "^1.0.5"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^2.2.2",
-    "@remix-run/dev": "^1.0.4",
+    "@remix-run/dev": "^1.0.5",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
-    "esbuild": "0.13.14",
-    "miniflare": "2.0.0-next.3",
     "typescript": "^4.1.2"
   },
   "engines": {
     "node": ">=14"
   },
-  "sideEffects": false,
-  "main": "dist/worker.js"
+  "sideEffects": false
 }
