--- a/package.json
+++ b/package.json
@@ -9,16 +9,11 @@
     "postinstall": "remix setup node"
   },
   "dependencies": {
-    "@code-hike/mdx": "0.3.0--canary.77.c8f7b29.0",
     "@remix-run/react": "^1.0.5",
-    "@remix-run/serve": "^1.0.5",
-    "@remix-run/vercel": "^1.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "rehype-highlight": "^5.0.0",
-    "remark-mdx-frontmatter": "^1.1.1",
-    "remark-toc": "^8.0.1",
-    "remix": "^1.0.5"
+    "remix": "^1.0.5",
+    "@remix-run/vercel": "^1.0.5"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.0.5",
