--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@remix-run/react": "^1.0.5",
+    "@remix-run/vercel": "^1.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remix": "^1.0.5",
-    "@remix-run/vercel": "^1.0.5"
+    "rehype-highlight": "^5.0.0",
+    "remix": "^1.0.5"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.0.5",
