--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@remix-run/react": "^1.0.5",
+    "@remix-run/serve": "^1.0.5",
     "@remix-run/vercel": "^1.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rehype-highlight": "^5.0.0",
+    "remark-gfm": "^3.0.1",
     "remix": "^1.0.5"
   },
   "devDependencies": {
