--- a/package.json
+++ b/package.json
@@ -9,20 +9,23 @@
     "postinstall": "remix setup node"
   },
   "dependencies": {
-    "@remix-run/react": "^1.0.5",
-    "@remix-run/serve": "^1.0.5",
-    "@remix-run/vercel": "^1.0.5",
+    "@prisma/client": "^3.5.0",
+    "@remix-run/react": "^1.0.6",
+    "@remix-run/serve": "^1.0.6",
+    "@remix-run/vercel": "^1.0.6",
+    "dotenv": "^10.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rehype-highlight": "^5.0.0",
     "remark-gemoji": "^7.0.1",
     "remark-gfm": "^3.0.1",
-    "remix": "^1.0.5"
+    "remix": "^1.0.6"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.0.5",
+    "@remix-run/dev": "^1.0.6",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "prisma": "^3.5.0",
     "typescript": "^4.1.2"
   },
   "engines": {
