--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@remix-run/react": "^1.0.5",
     "@remix-run/serve": "^1.0.5",
     "@remix-run/vercel": "^1.0.5",
+    "etag": "^1.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rehype-highlight": "^5.0.0",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^1.0.5",
+    "@types/etag": "^1.8.1",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "typescript": "^4.1.2"
