--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "etag": "^1.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "rehype-autolink-headings": "^6.1.0",
     "rehype-highlight": "^5.0.0",
+    "rehype-slug": "^5.0.0",
     "remark-gemoji": "^7.0.1",
     "remark-gfm": "^3.0.1",
+    "remark-toc": "^8.0.1",
     "remix": "^1.0.5"
   },
   "devDependencies": {
