--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "license": "",
   "scripts": {
-    "build": "remix build",
-    "dev": "remix dev",
-    "postinstall": "remix setup node"
+    "build": "npm run build:css && remix build",
+    "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
+    "postinstall": "remix setup node",
+    "dev:css": "postcss styles --base styles --dir app/styles -w",
+    "build:css": "postcss styles --base styles --dir app/styles --env production"
   },
   "dependencies": {
     "@remix-run/react": "^1.0.5",
@@ -28,6 +30,11 @@
     "@types/etag": "^1.8.1",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "autoprefixer": "^10.4.0",
+    "concurrently": "^6.4.0",
+    "cssnano": "^5.0.12",
+    "postcss": "^8.4.4",
+    "postcss-cli": "^9.0.2",
     "typescript": "^4.1.2"
   },
   "engines": {
