--- a/package.json
+++ b/package.json
@@ -1,44 +1,44 @@
 {
-  "private": true,
   "name": "ricardobusquet.com",
+  "private": true,
   "description": "",
   "license": "",
+  "sideEffects": false,
   "scripts": {
     "build": "npm run build:css && remix build",
+    "build:css": "postcss styles --base styles --dir app/styles --env production",
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
-    "postinstall": "remix setup node",
     "dev:css": "postcss styles --base styles --dir app/styles -w",
-    "build:css": "postcss styles --base styles --dir app/styles --env production"
+    "postinstall": "remix setup node"
   },
   "dependencies": {
-    "@remix-run/react": "^1.0.5",
-    "@remix-run/serve": "^1.0.5",
-    "@remix-run/vercel": "^1.0.5",
+    "@remix-run/react": "^1.1.3",
+    "@remix-run/serve": "^1.1.3",
+    "@remix-run/vercel": "^1.1.3",
     "etag": "^1.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "rehype-autolink-headings": "^6.1.0",
-    "rehype-highlight": "^5.0.0",
-    "rehype-slug": "^5.0.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-highlight": "^5.0.2",
+    "rehype-slug": "^5.0.1",
     "remark-gemoji": "^7.0.1",
     "remark-gfm": "^3.0.1",
     "remark-toc": "^8.0.1",
-    "remix": "^1.0.5"
+    "remix": "^1.1.3"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.0.5",
+    "@remix-run/dev": "^1.1.3",
     "@types/etag": "^1.8.1",
-    "@types/react": "^17.0.24",
-    "@types/react-dom": "^17.0.9",
-    "autoprefixer": "^10.4.0",
-    "concurrently": "^6.4.0",
-    "cssnano": "^5.0.12",
-    "postcss": "^8.4.4",
-    "postcss-cli": "^9.0.2",
-    "typescript": "^4.1.2"
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "autoprefixer": "^10.4.2",
+    "concurrently": "^7.0.0",
+    "cssnano": "^5.0.16",
+    "postcss": "^8.4.6",
+    "postcss-cli": "^9.1.0",
+    "typescript": "^4.5.5"
   },
   "engines": {
     "node": ">=14"
-  },
-  "sideEffects": false
+  }
 }
