--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 node_modules
 
-/.cache
-/build
-/dist
-/public/build
+.cache
+.vercel
+.output
 
+/build/
+/public/build
+/api/index.js
 
 # misc
 .DS_Store
@@ -17,18 +19,5 @@ yarn-error.log*
 .env
 
 .mf
-
-node_modules
-
-/.cache
-/.vercel
-/.output
-
-/public/build
-/api/build
-.vercel
-.idea
 *.css
 !styles/*.css
-
-api/_build
