--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "license": "",
   "sideEffects": false,
   "scripts": {
-    "build": "npm run build:css && remix build",
     "build:css": "postcss styles --base styles --dir app/styles --env production",
-    "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
+    "dev": "concurrently \"npm run dev:css\" \"npm run dev:remix\"",
     "dev:css": "postcss styles --base styles --dir app/styles -w",
-    "postinstall": "remix setup node"
+    "postinstall": "remix setup node",
+    "build": "npm run build:css && cross-env NODE_ENV=production remix build",
+    "dev:remix": "cross-env NODE_ENV=development remix dev"
   },
   "dependencies": {
-    "@remix-run/react": "^1.1.3",
-    "@remix-run/serve": "^1.1.3",
-    "@remix-run/vercel": "^1.1.3",
+    "@remix-run/react": "^1.2.1",
+    "@remix-run/vercel": "^1.2.1",
     "etag": "^1.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -24,19 +24,23 @@
     "remark-gemoji": "^7.0.1",
     "remark-gfm": "^3.0.1",
     "remark-toc": "^8.0.1",
-    "remix": "^1.1.3"
+    "remix": "^1.2.1"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.1.3",
+    "@remix-run/dev": "^1.2.1",
+    "@remix-run/serve": "^1.2.1",
     "@types/etag": "^1.8.1",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
+    "@types/react": "^17.0.24",
+    "@types/react-dom": "^17.0.9",
     "autoprefixer": "^10.4.2",
     "concurrently": "^7.0.0",
-    "cssnano": "^5.0.16",
+    "cross-env": "^7.0.3",
+    "cssnano": "^5.0.17",
+    "eslint": "^8.9.0",
     "postcss": "^8.4.6",
     "postcss-cli": "^9.1.0",
-    "typescript": "^4.5.5"
+    "prettier": "^2.5.1",
+    "typescript": "^4.1.2"
   },
   "engines": {
     "node": ">=14"
