--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "build:css": "postcss styles --base styles --dir app/styles --env production",
     "dev": "concurrently \"npm run dev:css\" \"npm run dev:remix\"",
     "dev:css": "postcss styles --base styles --dir app/styles -w",
-    "postinstall": "remix setup node",
     "build": "npm run build:css && cross-env NODE_ENV=production remix build",
     "dev:remix": "cross-env NODE_ENV=development remix dev"
   },
   "dependencies": {
+    "@remix-run/node": "^1.4.3",
     "@remix-run/react": "^1.4.3",
     "@remix-run/vercel": "^1.4.3",
     "etag": "^1.8.1",
@@ -23,8 +23,7 @@
     "rehype-slug": "^5.0.1",
     "remark-gemoji": "^7.0.1",
     "remark-gfm": "^3.0.1",
-    "remark-toc": "^8.0.1",
-    "remix": "^1.4.3"
+    "remark-toc": "^8.0.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.4.3",
