--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
-  "name": "ricardobusquet.com",
   "private": true,
-  "description": "",
-  "license": "",
   "sideEffects": false,
   "scripts": {
     "build:css": "postcss styles --base styles --dir app/styles --env production",
@@ -12,12 +9,13 @@
     "dev:remix": "cross-env NODE_ENV=development remix dev"
   },
   "dependencies": {
-    "@remix-run/node": "^1.4.3",
-    "@remix-run/react": "^1.4.3",
-    "@remix-run/vercel": "^1.4.3",
+    "@remix-run/node": "^1.7.5",
+    "@remix-run/react": "^1.7.5",
+    "@remix-run/vercel": "^1.7.5",
+    "@vercel/node": "^2.4.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "etag": "^1.8.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-highlight": "^5.0.2",
     "rehype-slug": "^5.0.1",
@@ -26,20 +24,21 @@
     "remark-toc": "^8.0.1"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.4.3",
-    "@remix-run/serve": "^1.4.3",
+    "@remix-run/dev": "^1.7.5",
+    "@remix-run/eslint-config": "^1.7.5",
+    "@remix-run/serve": "^1.7.5",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "eslint": "^8.23.1",
+    "typescript": "^4.7.4",
     "@types/etag": "^1.8.1",
-    "@types/react": "^17.0.24",
-    "@types/react-dom": "^17.0.9",
     "autoprefixer": "^10.4.2",
     "concurrently": "^7.0.0",
     "cross-env": "^7.0.3",
     "cssnano": "^5.0.17",
-    "eslint": "^8.9.0",
     "postcss": "^8.4.6",
     "postcss-cli": "^9.1.0",
-    "prettier": "^2.5.1",
-    "typescript": "^4.1.2"
+    "prettier": "^2.5.1"
   },
   "engines": {
     "node": ">=14"
