--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.0.0"
+    "astro": "^2.0.0",
+    "autoprefixer": "^10.4.13",
+    "cssnano": "^5.1.14",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-slug": "^5.1.0",
+    "remark-gemoji": "^7.0.1",
+    "remark-gfm": "^3.0.1",
+    "remark-toc": "^8.0.1"
   }
 }
