--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,22 @@
-node_modules
+# build output
+dist/
+.output/
+# generated types
+.astro/
 
-.cache
-.env
-.vercel
-.output
+# dependencies
+node_modules/
 
-/build/
-/public/build
-/api/index.js
-/api/index.js.map
-
-# misc
-.DS_Store
-
-# debug
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
+
+# environment variables
 .env
+.env.production
 
-.mf
-*.css
-!styles/*.css
+# macOS-specific files
+.DS_Store
