--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "autoprefixer": "^10.4.13",
     "cssnano": "^5.1.14",
     "rehype-slug": "^5.1.0",
-    "remark-gemoji": "^7.0.1",
+    "remark-emoji": "^3.1.1",
     "remark-gfm": "^3.0.1",
     "remark-toc": "^8.0.1"
   }
