--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.0.1",
+    "@astrojs/vercel": "^3.1.3",
+    "astro": "^2.0.15",
     "autoprefixer": "^10.4.13",
     "cssnano": "^5.1.14",
     "rehype-slug": "^5.1.0",
